--- a/form/index.html
+++ b/form/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="expressionsRegulieresForm.js" defer></script>
+    <script src="index.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -40,7 +40,7 @@
       <div>
         <label for="email">Email</label
         ><input
-          type="mail"
+          type="text"
           id="email"
           name="email"
           placeholder="Entrer votre email"
@@ -49,8 +49,6 @@
       <button type="reset">Annuler</button
       ><button type="submit">Valider</button>
     </form>
-    <div id="info">
-      <p class="maclass">c'est bien</p>
-    </div>
+    <div id="info"></div>
   </body>
 </html>
