--- a/form/index.html
+++ b/form/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="index.js" defer></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <form action="" method="post">
-      <div>
-        <label for="name">Nom</label
-        ><input
-          type="text"
-          id="name"
-          name="name"
-          placeholder="Entrer votre nom"
-        />
-      </div>
-      <div>
-        <label for="firstName">Prénom</label
-        ><input
-          type="text"
-          id="firstName"
-          name="firstName"
-          placeholder="Entrer votre prénom"
-        />
-      </div>
-      <div>
-        <label for="phone">Tel</label
-        ><input
-          type="text"
-          id="phone"
-          name="phone"
-          placeholder="Entrer votre téléphone"
-        />
-      </div>
-      <div>
-        <label for="email">Email</label
-        ><input
-          type="text"
-          id="email"
-          name="email"
-          placeholder="Entrer votre email"
-        />
-      </div>
-      <button type="reset">Annuler</button
-      ><button type="submit">Valider</button>
-    </form>
-    <div id="info"></div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <script src="index.js" defer></script>
+        <script src="expressionsRegulieresForm.js" async></script>
+        <title>Document</title>
+    </head>
+    <body>
+        <form action="" method="post">
+            <div>
+                <label for="name">Nom</label
+                ><input
+                    type="text"
+                    id="name"
+                    name="name"
+                    placeholder="Entrer votre nom"
+                />
+            </div>
+            <div>
+                <label for="firstName">Prénom</label
+                ><input
+                class="tes"
+                    type="text"
+                    id="firstName"
+                    name="firstName"
+                    placeholder="Entrer votre prénom"
+                />
+            </div>
+            <div>
+                <label for="phone">Tel</label
+                ><input
+                    type="text"
+                    id="phone"
+                    name="phone"
+                    placeholder="Entrer votre téléphone"
+                />
+            </div>
+            <div>
+                <label for="email">Email</label
+                ><input
+                    type="text"
+                    id="email"
+                    name="email"
+                    placeholder="Entrer votre email"
+                />
+            </div>
+            <button type="reset">Annuler</button
+            ><button type="submit">Valider</button>
+        </form>
+        <div id="info"></div>
+    </body>
 </html>
