feat : objet json

--- a/form/index.html
+++ b/form/index.html
@@ -7,23 +7,24 @@
         <link rel="stylesheet" href="style.css" />
         <script src="index.js" defer></script>
         <script src="expressionsRegulieresForm.js" async></script>
+        <script src="contact.js" async></script>
         <title>Document</title>
     </head>
     <body>
         <form action="" method="post">
             <div>
-                <label for="name">Nom</label
+                <label for="lastName">Nom</label
                 ><input
                     type="text"
-                    id="name"
-                    name="name"
+                    id="lastName"
+                    name="lastName"
                     placeholder="Entrer votre nom"
                 />
             </div>
             <div>
                 <label for="firstName">Prénom</label
                 ><input
-                class="tes"
+                    class="tes"
                     type="text"
                     id="firstName"
                     name="firstName"
